logs/ikazuchi.plugins.blockdiag.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/blockdiag'...
Listing './lib/python3.5/site-packages/blockdiag/imagedraw'...
Listing './lib/python3.5/site-packages/blockdiag/imagedraw/filters'...
Listing './lib/python3.5/site-packages/blockdiag/imagedraw/utils'...
Listing './lib/python3.5/site-packages/blockdiag/noderenderer'...
Listing './lib/python3.5/site-packages/blockdiag/noderenderer/flowchart'...
Listing './lib/python3.5/site-packages/blockdiag/plugins'...
Listing './lib/python3.5/site-packages/blockdiag/shapes'...
Listing './lib/python3.5/site-packages/blockdiag/tests'...
Listing './lib/python3.5/site-packages/blockdiag/tests/VLGothic'...
Listing './lib/python3.5/site-packages/blockdiag/tests/diagrams'...
Listing './lib/python3.5/site-packages/blockdiag/tests/diagrams/errors'...
Listing './lib/python3.5/site-packages/blockdiag/tests/rst'...
Listing './lib/python3.5/site-packages/blockdiag/utils'...
Listing './lib/python3.5/site-packages/blockdiag/utils/rst'...
Listing './lib/python3.5/site-packages/blockdiag-1.5.3.dist-info'...
Listing './lib/python3.5/site-packages/distribute-0.7.3-py3.5.egg-info'...
Listing './lib/python3.5/site-packages/funcparserlib'...
Listing './lib/python3.5/site-packages/funcparserlib/tests'...
Listing './lib/python3.5/site-packages/funcparserlib-0.3.6.egg-info'...
Listing './lib/python3.5/site-packages/ikazuchi'...
Compiling './lib/python3.5/site-packages/ikazuchi/conf.py'...
***   File "./lib/python3.5/site-packages/ikazuchi/conf.py", line 73
    print _(u"created conf file: {0}".format(conf_file))
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ikazuchi/core'...
Listing './lib/python3.5/site-packages/ikazuchi/core/handler'...
Compiling './lib/python3.5/site-packages/ikazuchi/core/handler/base.py'...
***   File "./lib/python3.5/site-packages/ikazuchi/core/handler/base.py", line 41
    print self._encode(u"{0:25}{language:5} {name}".format(
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ikazuchi/core/handler/text.py'...
***   File "./lib/python3.5/site-packages/ikazuchi/core/handler/text.py", line 29
    print self._encode(u"{0:25}{1}".format("sentence:", s))
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ikazuchi/core/translator'...
Compiling './lib/python3.5/site-packages/ikazuchi/core/translator/microsoft.py'...
***   File "./lib/python3.5/site-packages/ikazuchi/core/translator/microsoft.py", line 87
    print err_msg
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ikazuchi/ikazuchi.py'...
***   File "./lib/python3.5/site-packages/ikazuchi/ikazuchi.py", line 79
    print err_msg
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ikazuchi/locale'...
Listing './lib/python3.5/site-packages/ikazuchi/plugins'...
Compiling './lib/python3.5/site-packages/ikazuchi/plugins/_blockdiag.py'...
***   File "./lib/python3.5/site-packages/ikazuchi/plugins/_blockdiag.py", line 172
    print url
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ikazuchi/plugins/utils.py'...
***   File "./lib/python3.5/site-packages/ikazuchi/plugins/utils.py", line 20
    print _(u"Cannot instantiate Handler: {0}".format(err))
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ikazuchi/tests'...
Listing './lib/python3.5/site-packages/ikazuchi/tests/data'...
Listing './lib/python3.5/site-packages/ikazuchi/tests/data/rst'...
Compiling './lib/python3.5/site-packages/ikazuchi/tests/test_pep8.py'...
***   File "./lib/python3.5/site-packages/ikazuchi/tests/test_pep8.py", line 38
    print message
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ikazuchi/utils.py'...
***   File "./lib/python3.5/site-packages/ikazuchi/utils.py", line 61
    print _UNSUPPORTED_VERSION
                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ikazuchi/vim'...
Compiling './lib/python3.5/site-packages/ikazuchi/vim/enrai.py'...
***   File "./lib/python3.5/site-packages/ikazuchi/vim/enrai.py", line 6
    print "call ':pyfile enrai' from vim"
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ikazuchi/vim/raimei.py'...
***   File "./lib/python3.5/site-packages/ikazuchi/vim/raimei.py", line 6
    print "call ':pyfile raimei' from vim"
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ikazuchi/vim/utils.py'...
***   File "./lib/python3.5/site-packages/ikazuchi/vim/utils.py", line 27
    print "Set enc, raimei_api, raimei_from, raimei_to variables!"
                                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ikazuchi-0.5.6.egg-info'...
Listing './lib/python3.5/site-packages/ikazuchi.plugins.blockdiag-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/webcolors-1.7.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
